2002-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m
	Added method [copySelection] and [pasteSelection] to put the
	selected text in special pasteboard. The first gets called by 
	[setSelectedRange:affinity:stillSelecting:] while the later is
	bound to [middleMouseUp:]. (This is hard coded, could the key
	binding code handle this?)
	
2002-02-27  Fred Kiefer <FredKiefer@gmx.de>

	Patch from Alexander Malmberg <alexander@malmberg.org>:
	* Source/NSGraphicsContext.m
	[graphicsContextWithAttributes] always autorelease the context.
	Moved the unsetting of the current context from [dealloc] to
	[destroyContext] otherwise the current context can never be freed.
	* Source/NSApplication.m
	Removed some now unneeded FIXME.
	
Wed Feb 27 01:03:58 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m implemented indentation and enabled
	collapsing of items in the outline view.
	
Tue Feb 26 19:08:38 2002  Nicola Pero <nicola@brainstorm.co.uk>

	Patch by Michael Hanni <mhanni@yahoo.com> modified - 
	* Source/NSTabView.m ([-selectTabViewItem:]): Set the frame of the
	new selected view to content rect.

Tue Feb 26 18:26:53 2002  Nicola Pero <nicola@brainstorm.co.uk>

	Patch from Alexander Malmberg <alexander@malmberg.org>:
	* Source/NSFont.m ([+fontWithName:size:]): If size is 0, use
	NSUserFontSize instead.

2002-02-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m
	[setSize:] recache representations if size changes.
	[recache] throw old caches away as size may have changed.
	* Source/NSCachedImageRep.m
	[GSCacheW _initDefaults] set window not to be released when
	closed. As NSApp now closes all windows on terminate.
	* Source/NSApplication.m
	[NSIconWindow orderWindow:relativeTo:] don't complain about order
	out if application is closing.
	
Mon Feb 25 17:53:19 2002  Nicola Pero <nicola@brainstorm.co.uk>

	* Source/NSMenuItemCell.m ([-initWithCoder:]): Added code to decode old